[tool.poetry]
name = "cursor-pattern"
version = "1.1.0"
description = ""
authors = ["Alejandro Antunes <aantunes@netnovation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
